# meals-django-cra-untyped

./: .gitignore  README.md  package-lock.json  pyproject.toml
api/: .coveragerc  .flake8  .python-version  pyproject.toml  pytest.ini
api/config/: .env.example  celery.py  settings.py  urls.py
api/main/: models.py  serializers.py  urls.py  views.py
api/main/migrations/: 0002_token.py  0003_alter_user_is_active.py  0004_user_email_confirmed_datetime.py  0005_recipe.py  0007_alter_recipetime_time_type.py  0009_recipetag.py  0010_recipe_rating.py  0011_recipetime_note.py  0012_alter_recipetime_time_type.py  0013_recipetag_user.py  0014_recipetag_set_user.py  0015_alter_recipetag_user.py  0016_remove_recipetag_recipe_recipe_recipe_tags.py  0017_alter_recipetag_name.py  0018_alter_recipetag_name_alter_recipetag_unique_together.py  0019_recipe_servings.py  0020_alter_recipe_servings.py  0021_recipe_notes.py  0022_recipeequipment_recipe_recipe_equipment.py  0023_recipebrand_recipe_recipe_brand.py  0024_ingredient_ingredientbrand_ingredientdescription_and_more.py
api/main/tests/: conftest.py  factories.py
api/main/tests/models/: ingredient_test.py  recipe_equipment_test.py  recipe_tag_test.py  user_test.py
api/main/tests/serializers/: create_recipe_time_serializer_test.py  recipe_time_create_serializer.py  recipe_time_create_serializer_test.py  recipe_time_update_serializer_test.py
api/main/tests/support/: auth.py  drf_view_helpers.py  request_helpers.py
api/main/tests/tasks/: send_signup_confirmation_test.py
api/main/tests/views/: account_destroy_test.py  add_recipe_tag_test.py  bad_request_test.py  create_recipe_tag_test.py  create_recipe_test.py  create_recipe_time_test.py  delete_account_test.py  forbidden_test.py  ingredient_associate_test.py  ingredient_brand_search_test.py  ingredient_description_search_test.py  ingredient_destroy_test.py  ingredient_test.py  ingredient_unit_search_test.py  ingredient_update_test.py  internal_server_error_test.py  login_test.py  not_found_test.py  recip_tag_destroy_test.py  recipe_create_test.py  recipe_equipment_associate_test.py  recipe_equipment_destroy_test.py  recipe_equipment_dissociate_test.py  recipe_equipment_search_test.py  recipe_equipment_test.py  recipe_equipment_update_for_recipe_test.py  recipe_notes_test.py  (+25 more)
server/: .bandit  .coveragerc  .flake8  .python-version  pyproject.toml  pytest.ini
server/config/: .env.example  settings.py  urls.py
server/main/: admin.py  client.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
server/main/migrations/: 0001_initial.py  0006_recipetime.py  0008_rename_category_token_token_type.py
server/main/tests/: factories.py
(+295 files in other folders)
