[tool.poetry]
name = "meals"
version = "1.0.0"
description = ""
authors = ["Peter Havens <peter.havens@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.1"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
