[tool.poetry]
name = "meals"
version = "1.0.0"
description = ""
authors = ["Peter Havens <peter.havens@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.1"
Django = "^4.0.1"
psycopg2 = "^2.9.3"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
